--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/inicio_sesion.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/inicio_sesion.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,15 +12,15 @@
         android:id="@+id/parte_superior"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
         android:background="@drawable/fondo_circulo"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
         android:paddingTop="24dp"
         android:paddingBottom="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.37">
+        app:layout_constraintHeight_percent="0.37"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- Flecha atrás -->
         <ImageButton
@@ -31,8 +30,8 @@
             android:layout_gravity="start"
             android:layout_marginStart="16dp"
             android:background="@android:color/transparent"
-            android:src="?attr/actionModeCloseDrawable"
-            android:contentDescription="@null" />
+            android:contentDescription="@null"
+            android:src="?attr/actionModeCloseDrawable" />
 
         <!-- Logo -->
         <ImageView
