--- a/src/cliente/src/css/estilos.css
+++ b/src/cliente/src/css/estilos.css
@@ -1,3 +1,14 @@
+/*
+==========================================================
+Nombre del archivo: estilos.css
+Descripción: Hoja de estilos global de la aplicación Atmos.
+Define las variables, tipografía, botones, inputs y configuraciones
+generales de diseño utilizadas en todas las páginas del proyecto.
+Fecha: 30/10/2025
+Autor: Alan Guevara Martínez 
+==========================================================
+*/
+
 /* region --- RESET (DANIPA) --- */
 * { margin: 0; padding: 0; }
 *, *::before, *::after { box-sizing: border-box; }
