--- a/src/cliente/src/css/editar_perfil.css
+++ b/src/cliente/src/css/editar_perfil.css
@@ -28,7 +28,7 @@ Autor: Nerea Aguilar Forés
 .icono-cerrar {
   position: fixed;
   top: 2em;
-  left: 2em;
+  right: 2em;
   width: 22px;
   height: 22px;
   cursor: pointer;
@@ -89,7 +89,7 @@ Autor: Nerea Aguilar Forés
 
   .icono-cerrar {
     top: 1em;
-    left: 1em;
+   right: 1em;
     width: 20px;
     height: 20px;
   }
