--- a/src/cliente/src/css/vincular.css
+++ b/src/cliente/src/css/vincular.css
@@ -50,7 +50,7 @@ main {
 .icono-cerrar {
     position: fixed;
     top: 2em;
-    left: 2em;
+    right: 2em;
     width: 22px;
     height: 22px;
     cursor: pointer;
@@ -119,7 +119,7 @@ main {
 
     .icono-cerrar {
         top: 1em;
-        left: 1em;
+       right: 1em;
         width: 20px;
         height: 20px;
     }
