--- a/src/cliente/src/css/login.css
+++ b/src/cliente/src/css/login.css
@@ -15,19 +15,6 @@
 /* endregion */
 
 
-/* region --- ICONO DE CIERRE (ARRIBA IZQUIERDA FIJO) --- */
-.icono-cerrar {
-    position: fixed;
-    top: 2em;
-    left: 2em;
-    width: 22px;
-    height: 22px;
-    cursor: pointer;
-    z-index: 10;
-}
-/* endregion */
-
-
 /* region --- LOGO Y TEXTO INTRODUCTORIO --- */
 .logo-login {
     width: 120px;
@@ -59,15 +46,14 @@
     color: var(--color-azul-muy-oscuro);
     font-size: 0.95em;
     margin-bottom: 0.4em;
-    text-align: center;
 }
 
 /* Botón */
 .btn-login {
-    margin-top: 1.5em;
+    margin-top: 1em;
     width: 100%;
     padding: 0.6em;
-    font-size: 1em;
+    font-size: 1.1em;
 }
 /* endregion */
 
@@ -99,6 +85,15 @@
     color: var(--color-azul-muy-oscuro);
     text-decoration: none;
 }
+
+/* Posicionar "Olvidé mi contraseña" a la derecha */
+#contrasena.enlace-secundario {
+    text-align: right;       /* mueve el texto a la derecha */
+    display: block;
+    margin-top: 0.1em;       /* pequeño espacio debajo del campo */
+    margin-right: 4px;       /* ajusta si quieres más o menos margen */
+}
+
 /* endregion */
 
 
