--- a/src/cliente/src/css/registro.css
+++ b/src/cliente/src/css/registro.css
@@ -15,19 +15,6 @@
 /* endregion */
 
 
-/* region --- ICONO DE CIERRE (ARRIBA IZQUIERDA FIJO) --- */
-.icono-cerrar {
-    position: fixed;
-    top: 2em;
-    left: 2em;
-    width: 22px;
-    height: 22px;
-    cursor: pointer;
-    z-index: 10;
-}
-/* endregion */
-
-
 /* region --- LOGO Y TEXTO INTRODUCTORIO --- */
 .logo-registro {
     width: 125px;
@@ -60,7 +47,7 @@
     color: var(--color-azul-muy-oscuro);
     font-size: 0.95em;
     margin-bottom: 0.4em;
-    text-align: center;
+    text-align: left;
 }
 
 /* Campos dobles (nombre + apellidos) */
@@ -79,7 +66,7 @@
     margin-top: 1.5em;
     width: 100%;
     padding: 0.6em;
-    font-size: 1em;
+    font-size: 1.1em;
 }
 /* endregion */
 
