--- a/src/cliente/src/css/estilos.css
+++ b/src/cliente/src/css/estilos.css
@@ -111,18 +111,14 @@ p {
 
 /* region --- INPUTS --- */
 .input-base {
-    width: 100%;
-    background-color: var(--color-blanco);
-    border: none;
-    border-radius: 6px;
-    padding: 0.6em 0.8em;
-    font-size: 1em;
-    box-shadow: 0 0 0 1px var(--color-gris);
-    transition: box-shadow 0.2s ease-in-out;
+    all: unset;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+    border-bottom: 1px solid rgba(17, 24, 39, 0.29);
 }
 
 .input-base:focus {
     outline: none;
-    box-shadow: 0 0 0 2px var(--color-azul);
+    border-bottom: 1px solid rgba(17, 24, 39, 0.29);
 }
 /* endregion */
