--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/drawable/btn_pressed.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/drawable/btn_pressed.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#1F2B38"/>
-    <corners android:radius="6dp"/>
+
+    <solid android:color="@color/verde_boton_oscuro" />
+    <corners android:radius="20dp" />
 </shape>
