--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/registro.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/registro.xml
@@ -9,59 +9,42 @@
     tools:context=".RegistroActivity">
 
     <!-- BLOQUE SUPERIOR -->
+
+    <!-- BLOQUE INFERIOR -->
     <LinearLayout
         android:id="@+id/parte_superior"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
+        android:background="@drawable/fondo_registro_y_login"
         android:gravity="center_horizontal"
-        android:background="@drawable/fondo_circulo"
+        android:orientation="vertical"
         android:paddingTop="24dp"
         android:paddingBottom="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.35">
+        app:layout_constraintHeight_percent="0.30"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- Flecha atrás -->
-        <ImageButton
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginStart="16dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="@null"
-            android:src="@drawable/flecha_atras" />
 
         <!-- Logo -->
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:contentDescription="@null"
-            android:src="@drawable/logo_atmos" />
+            android:src="@drawable/logo_blanco_texto" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:maxWidth="260dp"
-            android:text="Introduce tus datos personales para crear una cuenta"
-            android:textAlignment="center"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
     </LinearLayout>
 
-    <!-- BLOQUE INFERIOR -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/parte_inferior"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="32dp"
+        android:layout_marginTop="16dp"
+        android:padding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -74,57 +57,53 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Nombre"
+            android:fontFamily="@font/roboto"
+            android:text="Nombre *"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/nombre_tv"
-            app:layout_constraintEnd_toEndOf="@+id/nombre_tv"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/nombre_tv" />
 
         <!-- APELLIDO -->
         <EditText
             android:id="@+id/nombre_tv"
+            style="@style/CampoTextoLinea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/bg_edittext"
             android:inputType="textPersonName"
             android:padding="12dp"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/darker_gray"
             app:layout_constraintEnd_toStartOf="@+id/apellidos_tv"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="51dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
         <TextView
             android:id="@+id/textViewA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Apellido"
+            android:fontFamily="@font/roboto"
+            android:text="Apellido *"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/apellidos_tv"
-            app:layout_constraintEnd_toEndOf="@+id/apellidos_tv"
             app:layout_constraintStart_toStartOf="@+id/apellidos_tv" />
 
         <EditText
             android:id="@+id/apellidos_tv"
+            style="@style/CampoTextoLinea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_edittext"
             android:inputType="textPersonName"
             android:padding="12dp"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/darker_gray"
             app:layout_constraintBottom_toBottomOf="@+id/nombre_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -137,26 +116,24 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Correo electrónico"
+            android:fontFamily="@font/roboto"
+            android:text="Correo electrónico *"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/correo_tv"
-            app:layout_constraintEnd_toEndOf="@+id/correo_tv"
+            app:layout_constraintBottom_toTopOf="@+id/textView11"
             app:layout_constraintStart_toStartOf="@+id/correo_tv" />
 
         <EditText
             android:id="@+id/correo_tv"
+            style="@style/CampoTextoLinea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_edittext"
             android:inputType="textEmailAddress"
             android:padding="12dp"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nombre_tv" />
@@ -166,26 +143,26 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Contraseña"
+            android:fontFamily="@font/roboto"
+            android:text="Contraseña *"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/contrasenya_tv"
-            app:layout_constraintEnd_toEndOf="@+id/contrasenya_tv"
             app:layout_constraintStart_toStartOf="@+id/contrasenya_tv" />
 
         <EditText
             android:id="@+id/contrasenya_tv"
+            style="@style/CampoTextoLinea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_edittext"
             android:inputType="textPassword"
             android:padding="12dp"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/darker_gray"
+            android:drawableEnd="@drawable/ic_eye"
+            android:drawablePadding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/correo_tv" />
@@ -195,58 +172,129 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Repetir contraseña"
+            android:fontFamily="@font/roboto"
+            android:text="Repetir contraseña *"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/contrasenyaRep_tv"
-            app:layout_constraintEnd_toEndOf="@+id/contrasenyaRep_tv"
             app:layout_constraintStart_toStartOf="@+id/contrasenyaRep_tv" />
 
-        <!-- BOTÓN REGISTRO -->
         <EditText
             android:id="@+id/contrasenyaRep_tv"
+            style="@style/CampoTextoLinea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/bg_edittext"
             android:inputType="textPassword"
             android:padding="12dp"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/darker_gray"
+            android:drawableEnd="@drawable/ic_eye"
+            android:drawablePadding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/contrasenya_tv" />
 
+
+        <!-- BOTÓN REGISTRO -->
+
         <Button
             android:id="@+id/confirmarRegistro_btn"
+            style="@style/BotonPrincipal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="64dp"
-            android:backgroundTint="#1F2B38"
-            android:text="Confirmar Registro"
+            android:backgroundTint="@color/verde_boton"
+            android:text="Confirmar"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/contrasenyaRep_tv"
+            app:layout_constraintStart_toStartOf="@+id/contrasenyaRep_tv" />
 
         <!-- ENLACE A INICIO SESIÓN -->
-        <TextView
+        <LinearLayout
             android:id="@+id/enlace_inicioSesion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
             android:layout_marginTop="16dp"
-            android:text="Ya tengo una cuenta. Iniciar sesión"
-            android:textColor="#1F2B38"
+            app:layout_constraintTop_toBottomOf="@id/confirmarRegistro_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/tvPregunta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="¿Tienes una cuenta?"
+                android:fontFamily="@font/roboto"
+                android:textColor="#1F2B38"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvIrInicio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" Iniciar sesión"
+                android:fontFamily="@font/roboto"
+                android:textColor="#059669"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:clickable="true"
+                android:focusable="true"
+                android:paddingStart="4dp"/>
+        </LinearLayout>
+
+        <!-- SUBTÍTULO -->
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Regístrate para empezar tu experiencia"
             android:textSize="16sp"
-            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/textView10"
+            app:layout_constraintStart_toStartOf="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_bold"
+            android:text="Registro"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmarRegistro_btn" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="Debe incluir al menos 6 carácteres e incluir números o símbolos"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/correo_tv"
+            app:layout_constraintStart_toStartOf="@+id/correo_tv" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Aceptas nuestros términos de servicio y política de privacidad"
+            android:textSize="12sp"
+            android:textColor="#1F2B38"
+            android:buttonTint="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/confirmarRegistro_btn"
+            app:layout_constraintEnd_toEndOf="@+id/confirmarRegistro_btn"
+            app:layout_constraintStart_toStartOf="@+id/confirmarRegistro_btn" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
