--- a/src/cliente/src/css/registro.css
+++ b/src/cliente/src/css/registro.css
@@ -1,3 +1,12 @@
+/**
+ * --------------------------------------------------------------
+ *  Fichero: registro.css
+ *  Autor: Alan Guevara Martínez
+ *  Fecha: 14/11/2025
+ * --------------------------------------------------------------
+ */
+
+
 /* CONTENEDOR GENERAL */
 .registro-container.registro-solo {
     display: flex;
