--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -3,4 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- HEADER -->
+    <include layout="@layout/toolbar_header"/>
+
+    <!-- BOTTOM NAV (siempre fijo abajo) -->
+    <include layout="@layout/bottom_nav"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
