--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/toolbar_header.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/toolbar_header.xml
@@ -16,11 +16,11 @@
             android:id="@+id/tituloHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:text="Mi sensor"
+            android:textColor="@color/verde_principal"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#2FA66B"
-            android:layout_centerVertical="true" />
+            android:textStyle="bold" />
 
         <!-- Icono Campana -->
         <ImageView
