feat: layout Android perfil y editar perfil.

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
@@ -48,4 +48,10 @@
         android:layout_height="wrap_content"
         android:text="LOGIN (TEMPORAL)" />
 
+    <Button
+        android:id="@+id/perfilPage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PERFIL (TEMPORAL)" />
+
 </android.widget.LinearLayout>
