--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/rest_contrasenya.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/rest_contrasenya.xml
@@ -149,6 +149,7 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="24dp"
             android:text="Enviar correo"
+            android:fontFamily="@font/roboto"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
