feat: todo completo y funcional en relación a perfil y editar perfil.

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/editar_perfil.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/editar_perfil.xml
@@ -150,7 +150,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:backgroundTint="#CCCCCC"
-                android:drawableEnd="@drawable/ic_eye"
+                android:drawableEnd="@drawable/ic_eye_close"
                 android:fontFamily="@font/roboto_light"
                 android:inputType="textPassword"
                 android:padding="8dp"
