feat: Layout vincular sensor, hago push ya para no tener problemas al añadir cosas.

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
@@ -54,4 +54,10 @@
         android:layout_height="wrap_content"
         android:text="PERFIL (TEMPORAL)" />
 
+    <Button
+        android:id="@+id/vincularPage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="VINCULAR QR (TEMPORAL)" />
+
 </android.widget.LinearLayout>
