--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/themes.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.BTLE_AlanGuevara" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+
     </style>
 
     <style name="Theme.BTLE_AlanGuevara" parent="Base.Theme.BTLE_AlanGuevara" />
