--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/registro.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/registro.xml
@@ -50,7 +50,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/parte_superior"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="1.0">
 
         <!-- NOMBRE -->
         <TextView
@@ -159,10 +159,10 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:inputType="textPassword"
-            android:padding="12dp"
             android:drawableEnd="@drawable/ic_eye"
             android:drawablePadding="8dp"
+            android:inputType="textPassword"
+            android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/correo_tv" />
@@ -188,10 +188,10 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:inputType="textPassword"
-            android:padding="12dp"
             android:drawableEnd="@drawable/ic_eye"
             android:drawablePadding="8dp"
+            android:inputType="textPassword"
+            android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -219,19 +219,19 @@
             android:id="@+id/enlace_inicioSesion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/confirmarRegistro_btn"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/confirmarRegistro_btn">
 
             <TextView
                 android:id="@+id/tvPregunta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="¿Tienes una cuenta?"
                 android:fontFamily="@font/roboto"
+                android:text="¿Tienes una cuenta?"
                 android:textColor="#1F2B38"
                 android:textSize="16sp" />
 
@@ -239,14 +239,14 @@
                 android:id="@+id/tvIrInicio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Iniciar sesión"
-                android:fontFamily="@font/roboto"
-                android:textColor="#059669"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 android:clickable="true"
                 android:focusable="true"
-                android:paddingStart="4dp"/>
+                android:fontFamily="@font/roboto"
+                android:paddingStart="4dp"
+                android:text=" Iniciar sesión"
+                android:textColor="#059669"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- SUBTÍTULO -->
@@ -287,10 +287,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Aceptas nuestros términos de servicio y política de privacidad"
-            android:textSize="12sp"
-            android:textColor="#1F2B38"
             android:buttonTint="@color/black"
+            android:text="Aceptas nuestros términos de servicio y política de privacidad"
+            android:textColor="#1F2B38"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/confirmarRegistro_btn"
             app:layout_constraintEnd_toEndOf="@+id/confirmarRegistro_btn"
             app:layout_constraintStart_toStartOf="@+id/confirmarRegistro_btn" />
