--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/values-night/themes.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,11 @@
     <style name="Base.Theme.BTLE_AlanGuevara" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@android:color/white</item>
+        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="colorSurface">@android:color/white</item>
+
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
