chore: layout menu, falta header en todos

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_main.xml
@@ -60,4 +60,10 @@
         android:layout_height="wrap_content"
         android:text="VINCULAR QR (TEMPORAL)" />
 
+    <Button
+        android:id="@+id/irMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="IR A MENU (TEMPORAL - ESTOY CANSADO)" />
+
 </android.widget.LinearLayout>
